test/sprtn/errors/duplicate-unused.sprtn
(let ((x 23)
      (y 'nope)
      (x 5))
  y)
(letrec ((x 23)
         (y 'nope)
         (x 5))
  y)
(lambda (x y x)
  y)
